# haid

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.claude/: launch.json
.claude-plugin/: marketplace.json  plugin.json
.claude/workflows/: haid-judge.js  haid-tag.js
.github/workflows/: benchmark-pin.yml  ci.yml  publish.yml  sync-board.yml
calibration/: README.md  __init__.py  _extract_verdicts.py  _pilot_report.py  blind.py  bt_h5.py  build_difficulty_anchors.py  classify.py  config.py  filekind.py  github.py  harvest.py  hn.py  ladder.py  manifest.py  pass2.py  pulls.py
docs/: architecture.md  axis-calibration-playbook.md  calibration-experiment.md  calibration-pilot-1.md  claude-code-data-format.md  cleanliness-ladder.md  data-inventory.md  data-structure-report.md  detectors.md  difficulty-ladder.md  intent-taxonomy.md  metrics-output-schema.md  originality-ladder.md  scoring-rubric.md  session-graph-design.md  tooling-landscape.md  treatments.md  trust-discipline.md  vision.md  visualization.md
docs/decisions/: 0001-language-and-stack.md  0002-graph-build-vs-persist.md  0003-line-identity-anchoring.md  0004-git-session-tagging.md  0005-community-benchmark.md  README.md
docs/plans/: bugfix-reward.md
hooks/: ensure_haid.py  hooks.json
plans/: agent-analysis.md  community-benchmark.md  open-questions.md  phase1-build.md  roadmap.md
plans/archive/: mvp.md  step4-build.md
research/: README.md  analyze_records.py  extract_examples.py  probe_shapes.py
scripts/: README.md  benchmark_pin.json  build_metric_baselines.py  check_benchmark_pin.py  check_versions.py  release.py  sync_board.py  viz_assemble.py  viz_extract.py
src/: README.md
src/haid/: __init__.py  cli.py  diffio.py  filekind.py  window.py
tests/: test_cli_why_gate.py  test_self_audit_exclusion.py  test_versions.py
tests/bridge/: test_episode_inputs.py  test_reconstruct.py  test_span_inputs.py  test_usage.py
tests/episodes/: test_episodes.py  test_score.py
tests/fixtures/: README.md
tests/graph/: test_bash_read.py  test_bash_write.py  test_build.py
tests/intent/: test_intent.py
tests/metrics/: test_baseline.py  test_emitter.py  test_episode_scope.py  test_metrics.py
tests/report/: test_benchmark_pin.py  test_compose.py  test_rank.py  test_submit.py  (+2 more)
tools/: tune_execution_factor.py  validate_fix_placement.py
viz/: _bugrepro.html  bus.js  components.html  data.js  index.html  overview.html
(+111 files in other folders)
