[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "haid"
version = "0.0.13"
description = "How Am I Doing — local-only self-audit & coaching for Claude Code sessions"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "dv-hart", email = "jhart@datavine.us" }]
keywords = ["claude-code", "self-audit", "coaching", "llm", "agent", "telemetry"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = []  # stdlib only — model judgment is delegated to the host agent (see scoring/compare.py)

# Tooling for contributors + CI (NOT runtime deps — the package stays stdlib-only).
[project.optional-dependencies]
dev = ["pytest>=7", "build", "twine", "pre-commit"]

[project.urls]
Homepage = "https://github.com/dv-hart/haid"
Repository = "https://github.com/dv-hart/haid"
Issues = "https://github.com/dv-hart/haid/issues"

[project.scripts]
haid = "haid.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
haid = ["data/*.json", "data/anchor_diffs/*.diff", "viz/assets/*.html",
        "viz/assets/*.css", "viz/assets/*.js"]
# data/benchmark_board.json (the community board snapshot `haid rank`/`haid report` read)
# is covered by data/*.json above; refreshed by scripts/sync_board.py (sanitized) from the
# data-only benchmark repo.
